--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,14 @@ pycodestyle==2.9.1
 pyflakes==2.5.0
 Pygments==2.13.0
 tinydb==4.7.0
+flake8==4.0.1
+flake8-html==0.4.2
+Jinja2==3.1.2
+lorem==0.1.1
+MarkupSafe==2.1.1
+mccabe==0.6.1
+names==0.3.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+Pygments==2.13.0
+tinydb==4.7.0
